# hfst-ospell

./: CMakeLists.txt  ChangeLog  ChangeLog.old  Makefile.am  NEWS  ZHfstOspeller.cc  configure.ac  hfst-ol.cc  hfst-ol.h  hfst-ospell-office.1  hfst-ospell.1  liboffice.cc  liboffice.h  main.cc  office.cc  ospell.cc
